--- a/package.json
+++ b/package.json
@@ -18,7 +18,18 @@
   },
   "homepage": "https://github.com/zugarzeeker/node-api-boilerplate#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "connect-mongo": "^1.3.2",
+    "errorhandler": "^1.4.3",
+    "express": "^4.14.0",
+    "express-flash": "0.0.2",
+    "express-session": "^1.14.0",
+    "express-validator": "^2.20.8",
+    "lusca": "^1.4.1",
+    "mongoose": "^4.5.9",
+    "morgan": "^1.7.0",
+    "multer": "^1.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
