--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "connect-mongo": "^1.3.2",
+    "cors": "^2.7.1",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "express-flash": "0.0.2",
