--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "config": "^1.21.0",
     "connect-mongo": "^1.3.2",
     "cors": "^2.7.1",
     "errorhandler": "^1.4.3",
