--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a simple boilerplate for building API with Node.",
   "main": "build/bin/server.js",
   "scripts": {
+    "eslint": "eslint --quiet **/**/*.js **/*.js **.js",
     "dev": "babel-node ./src/bin/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/zugarzeeker/node-api-boilerplate#readme",
   "dependencies": {
+    "babel-eslint": "^6.1.2",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "config": "^1.21.0",
@@ -38,6 +40,9 @@
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^3.3.1"
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb-base": "^5.0.2",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-plugin-import": "^1.13.0"
   }
 }
