--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "babel-node ./src/bin/server",
     "build": "babel src --out-dir build --source-maps",
     "start": "node build/bin/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pm2-dev": "pm2 delete all; pm2-dev start pm2.json"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   "dependencies": {
     "babel-eslint": "^6.1.2",
     "body-parser": "^1.15.2",
+    "cloudinary": "^1.4.1",
     "compression": "^1.6.2",
     "config": "^1.21.0",
     "connect-mongo": "^1.3.2",
@@ -45,6 +47,7 @@
     "eslint": "^3.3.1",
     "eslint-config-airbnb-base": "^5.0.2",
     "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^1.13.0"
+    "eslint-plugin-import": "^1.13.0",
+    "pm2": "^1.1.3"
   }
 }
