--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
     "lusca": "^1.4.1",
+    "mime": "^1.3.4",
     "mongoose": "^4.5.9",
     "morgan": "^1.7.0",
     "multer": "^1.2.0"
