--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
     "global-require": "off",
     "max-len": "off",
     "new-cap": ["error", { "capIsNewExceptionPattern": "^Router" }],
-    "comma-dangle": ["error", "never"]
+    "comma-dangle": ["error", "never"],
+    no-underscore-dangle: ["error", { "allow": ["_id"] } ]
   },
   "env": {
     "es6": true,
